<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:gravity="center">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textSize="25sp"
                        android:textStyle="bold"
                        android:gravity="center"
                        android:textColor="#5c5b5b"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-condensed"/>
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:text="@string/sub_title"
                        android:gravity="center"
                        android:textColor="#979696"
                        android:background="@android:color/transparent"
                        android:fontFamily="sans-serif-condensed"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:layout_gravity="bottom">
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="8"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:id="@+id/lost_a_pet_btn"
                        android:background="@drawable/button_background"
                        android:text="@string/lost_pet"
                        android:textColor="#ffffff"/>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="5dp"
                        android:ems="8"
                        android:textSize="12sp"
                        android:textStyle="bold"
                        android:id="@+id/found_a_pet_btn"
                        android:background="@drawable/button_background"
                        android:text="@string/found_pet"
                        android:textColor="#ffffff"/>
                </LinearLayout>

    </LinearLayout>

</LinearLayout>