<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    >

    <!--<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">-->

    <ScrollView
        android:id="@+id/me_info_scroll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:padding="5dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="sans-serif-condensed"
                android:gravity="center"
                android:text="@string/sign_in_title"
                android:textSize="18sp"
                android:textColor="#fff"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_email_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/user_sign_up_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:inputType="textEmailAddress"
                        android:lines="1"
                        android:singleLine="true"
                         />

                </android.support.design.widget.TextInputLayout>

                <android.support.design.widget.TextInputLayout
                    android:id="@+id/user_password_wrapper"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp">

                    <EditText
                        android:id="@+id/user_sign_up_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:fontFamily="sans-serif-condensed"
                        android:inputType="textPassword"
                        android:lines="1"
                        android:singleLine="true" />

                </android.support.design.widget.TextInputLayout>

                <TextView
                    android:id="@+id/error_message"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="@string/sign_in_password_error"
                    android:textColor="@android:color/holo_red_light"
                    android:visibility="gone" />
                <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="10dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/terms_condition_check_box"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree_terms_conditions"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-condensed"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions_description"
                            android:textSize="12sp"
                            android:id="@+id/terms_conditions_description"
                            android:textColor="#4F96E1"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-condensed"/>
                    </LinearLayout>-->
                <Button
                    android:id="@+id/sign_in_button"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:background="@drawable/button_background"
                    android:ems="6"
                    android:fontFamily="sans-serif-condensed"
                    android:text="@string/signin_button"
                    android:textColor="#FFFFFF"
                    android:textSize="14sp"
                    android:textStyle="bold" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_margin="10dp"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/register"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="start"
                        android:layout_weight="1"
                        android:gravity="start"
                        android:text="@string/user_register"
                        android:textColor="#fff" />

                    <TextView
                        android:id="@+id/forgot_password"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="end"
                        android:layout_weight="1"
                        android:gravity="end"
                        android:text="@string/forgot_password"
                        android:textColor="#fff" />
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </ScrollView>
    <!--</LinearLayout>-->

</LinearLayout>