<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true">

   <!-- <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_margin="10dp">-->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/me_info_scroll_view"
            android:layout_weight="1"
            android:scrollbars="none"
            android:padding="5dp">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/sign_up_title"
                    android:gravity="center"
                    android:layout_margin="10dp"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:fontFamily="sans-serif-condensed"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    >

                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_name_wrapper"
                        android:layout_margin="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:lines="1"
                            android:fontFamily="sans-serif-condensed"
                            android:id="@+id/user_sign_up_username"
                            android:inputType="textPersonName"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_email_wrapper"
                        android:layout_margin="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:lines="1"
                            android:fontFamily="sans-serif-condensed"
                            android:id="@+id/user_sign_up_email"
                            android:inputType="textEmailAddress"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/user_password_wrapper"
                        android:layout_margin="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:lines="1"
                            android:fontFamily="sans-serif-condensed"
                            android:id="@+id/user_sign_up_password"
                            android:inputType="textPassword"/>

                    </android.support.design.widget.TextInputLayout>
                    <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/sign_up_confirm_password_wrapper"
                        android:layout_margin="10dp">
                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            android:lines="1"
                            android:fontFamily="sans-serif-condensed"
                            android:id="@+id/user_sign_up_confirm_password"
                            android:inputType="textPassword"/>

                    </android.support.design.widget.TextInputLayout>
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="start"
                        android:layout_margin="10dp">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:id="@+id/terms_condition_check_box"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agree_terms_conditions"
                            android:textSize="12sp"
                            android:fontFamily="sans-serif-condensed"/>
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/terms_conditions_description"
                            android:textSize="12sp"
                            android:id="@+id/terms_conditions_description"
                            android:textColor="#4F96E1"
                            android:layout_marginLeft="5dp"
                            android:fontFamily="sans-serif-condensed"/>
                    </LinearLayout>
                    <Button
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:ems="6"
                        android:id="@+id/sign_up_button"
                        android:text="@string/signup_button"
                        android:background="@drawable/button_background"
                        android:textColor="#FFFFFF"
                        android:fontFamily="sans-serif-condensed"
                        android:textSize="14sp"
                        android:textStyle="bold"
                        android:layout_gravity="center"
                        android:layout_margin="10dp"/>
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
    <!--</LinearLayout>-->

</LinearLayout>